styled and finnished

--- a/src/app/search-bar/search-bar.component.html
+++ b/src/app/search-bar/search-bar.component.html
@@ -1,3 +1,5 @@
-<form (submit)="onFormSubmit($event)">
-    <input (input)="term = $event.target.value" />
-</form>
+<div class="box">
+    <form (submit)="onFormSubmit($event)">
+        <input class="input" (input)="term = $event.target.value" />
+    </form>
+</div>
